--- a/src/components/ValidatedForm/ValidatedForm.css
+++ b/src/components/ValidatedForm/ValidatedForm.css
@@ -36,6 +36,7 @@
   
   .input-feedback {
     color: rgb(235, 54, 54);
+    font-weight: bold;
     margin-top: 10px;
     font-size: 14px;
     margin-bottom: 20px;
