--- a/src/components/ImageFaceDetection/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageFaceDetection/ImageLinkForm/ImageLinkForm.css
@@ -1,5 +1,5 @@
 .form1{
-  width: 700px;
+  width: 50%;
   background:
   radial-gradient(black 3px, transparent 4px),
   radial-gradient(black 3px, transparent 4px),
@@ -7,6 +7,18 @@
   linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
   linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
   #fff;
-  background-size: 109px 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
-  background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
+  background-size: 109% 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
+  background-position: 54% 55%, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
 }
+button {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  margin-left: -8px;
+
+  /* padding: 10px 15px;
+  background-color: rgb(70, 153, 179);
+  color: white;
+  border: 1px solid rgb(70, 153, 179);
+  background-color: 250ms; */
+}
+
