--- a/src/components/ValidatedForm/ValidatedForm.css
+++ b/src/components/ValidatedForm/ValidatedForm.css
@@ -50,8 +50,8 @@
     background-color: 250ms;
   }
   
-  /* button:hover {
+  button:hover {
     cursor: pointer;
     background-color: white;
     color: rgb(70, 153, 179);
-  } */
+  }
